# ConvPhase

./: .flake8  .gitignore  .gitmodules  .isort.cfg  BUILD.md  CMakeLists.txt  MANIFEST.in  README.md  SeqPhase.make  notes.txt  packages.html  phased.fasta  premake5.lua  pyproject.toml  requirements-testpypi.txt  requirements.txt  setup.py
.github/actions/python-frozen/: action.yaml
.github/actions/python-latest/: action.yaml
.github/actions/python-test/: action.yaml
.github/workflows/: deploy.yml  test.yml  wheels.yml
include/: convphase.h  fastaconverter.h  hxcpp_symbols.h  phase.h  phase_data.h  python_wrapper.h
samples/: homozygousIndividualsToPhase.fa
scripts/: install-haxe.sh  iterators.py  phase.py  poc.sh
src/: convphase.cpp  fastaconverter.cpp  main.cpp  python_wrapper.cpp
src/itaxotools/_convphase/include/: fastaconverter.h  python_wrapper.h
src/itaxotools/_convphase/src/: convphase.cpp  fastaconverter.cpp  python_wrapper.cpp
src/itaxotools/_example/include/: example.hpp
src/itaxotools/_example/src/: example.cpp
src/itaxotools/convphase/: __init__.py  __main__.py  files.py  main.py  phase.py  scan.py  types.py
test/: iterators.py  phased.fasta  test.py
test/samples/: phasedHaplotypes.fa
test/samples/Phase_example_files_13Feb2023/: Brygoo_Rag1_abbreviatednames_CUT.fas  Chimerella_CXCR4_CUT.fas  Chimerella_POMC_CUT.fas  Chimerella_RAG1_CUT.fas  malagasius_Rag1_CUT.fas
tests/: test_files.py  test_iter_phase.py  test_phase.py  test_scan.py
